# computer_graphics

INF585_Project_Saba_Tavdgiridze/INF585_Project_Saba_Tavdgiridze/SourceCode/: CMakeLists.txt  FragmentShader_phong.glsl  FragmentShader_simple.glsl  FragmentShader_world.glsl  Main.cpp  VertexShader_phong.glsl  VertexShader_simple.glsl  VertexShader_world.glsl  readme.md
